[package]
name = "rust-gc-count"
version = "0.1.0"
edition = "2021"
description = "Calculate GC and write into a wiggle file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.0.26"
seq_io = "0.3.1"

[[bin]]
name="gccount"
path="src/main.rs"
