[package]
name = "rust_gc_count"
version = "0.2.0"
edition = "2021"
authors = ["Andy Yates"]
description = "GC and sequence utilities"
license = "Apache-2.0"
homepage = "https://github.com/andrewyatz/rust-gc-count"
repository = "https://github.com/andrewyatz/rust-gc-count"
readme = "README.md"
keywords = ["bio", "fasta"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "2.0.0"
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.0.26"
md-5 = "0.10.5"
seq_io = "0.3.1"
sha2 = "0.10.7"

[[bin]]
name="gccount"
path="src/main.rs"

[[bin]]
name="checksumseq"
path="src/checksumseq.rs"

[profile.release]
lto = true
