[package]
name = "rust_gc_count_py"
version = "0.2.0"
edition = "2021"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gc_count"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
seq_io = "0.3.1"
rust_gc_count = { path = "../" }